@startuml

title __DATABASE's Class Diagram__\n

  namespace com.itbird.design {
    namespace iterator {
      namespace database {
        class com.itbird.design.iterator.database.DBHelper {
            {static} + DB_NAME : String
            {static} + TABLE_NAME : String
            + DBHelper()
            + DBHelper()
            + DBHelper()
            + DBHelper()
            + init()
            + onCreate()
            + onUpgrade()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace iterator {
      namespace database {
        class com.itbird.design.iterator.database.DataProvider {
            + delete()
            + getType()
            + insert()
            + onCreate()
            + query()
            + update()
        }
      }
    }
  }
  

  com.itbird.design.iterator.database.DBHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.itbird.design.iterator.database.DataProvider -up-|> android.content.ContentProvider
  com.itbird.design.iterator.database.DataProvider o-- com.itbird.design.iterator.database.DBHelper : dbHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
